force-app/main/default/objects/Case_Queue_Mapping__mdt/Case_Queue_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Case Queue Mapping</label>
    <pluralLabel>Case Queue Mapping</pluralLabel>
</CustomObject>