force-app/main/default/objects/Case_Queue_Mapping__mdt/fields/Is_Digital__c.field-meta.xml
<CustomField>
    <fullName>Is_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Digital</label>
    <type>Checkbox</type>
</CustomField>