force-app/main/default/objects/Case_Queue_Mapping__mdt/fields/is_Open_Queue_TA__c.field-meta.xml
<CustomField>
    <fullName>is_Open_Queue_TA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Open Queue TA</label>
    <type>Checkbox</type>
</CustomField>