force-app/main/default/objects/Case_Queue_Mapping__mdt/fields/Queue_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Queue_End_Time__c</fullName>
    <description>This field stores the queue end time i.e. the time in which cases should be assigned to the corresponding queue if a customer comments or sends email related to the case and the owner is on time-off</description>
    <inlineHelpText>This field stores the queue end time i.e. the time in which cases should be assigned to the corresponding queue if a customer comments or sends email related to the case and the owner is on time-off</inlineHelpText>
    <label>Queue End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>