force-app/main/default/objects/Case_Queue_Mapping__mdt/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <label>Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>