force-app/main/default/objects/Case_Queue_Mapping__mdt/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>TimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>