force-app/main/default/objects/Case_Queue_Mapping__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Queue_Id__c</columns>
    <columns>TimeZone__c</columns>
    <columns>Queue_Start_Time__c</columns>
    <columns>Queue_End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>